# prompt_bridge

./: .env.example  .gitignore  README.md  config.development.toml  config.production.toml  config.toml  pyproject.toml  test_chatgpt_request.py  test_client.py  test_qwen_english.ps1  test_qwen_request.ps1  test_request.ps1  test_streaming_debug.py
docs/: sre-reliability-assessment.md  streaming-implementation-plan.md
src/prompt_bridge/: __init__.py  main.py
src/prompt_bridge/application/: __init__.py  chat_completion.py  provider_registry.py
src/prompt_bridge/cli/: __init__.py
src/prompt_bridge/cli/commands/: __init__.py  health.py  logs.py  start.py  status.py
src/prompt_bridge/cli/utils/: __init__.py  client.py  formatting.py
src/prompt_bridge/domain/: __init__.py  config.py  entities.py  exceptions.py  providers.py
src/prompt_bridge/infrastructure/: browser.py  chatgpt_automation.py  chatgpt_automation_debug.py  config.py  formatting.py  observability.py  parsing.py  qwen_automation.py  resilience.py  session_pool.py
src/prompt_bridge/infrastructure/providers/: __init__.py  base.py  chatgpt.py  qwen.py  utils.py
src/prompt_bridge/presentation/: __init__.py  debug_routes.py  dtos.py  health.py  middleware.py  routes.py
tests/: __init__.py  conftest.py
tests/unit/: __init__.py  test_browser.py  test_chat_completion.py  test_chatgpt_provider.py  test_cli_health.py  test_cli_logs.py  test_cli_start.py  test_cli_status.py  test_cli_utils.py  test_config.py  test_config_integration.py  test_domain_entities.py  test_domain_exceptions.py  test_domain_providers.py  test_formatting.py  test_health.py  test_integration_provider_registry.py  test_main.py  test_middleware.py  test_observability.py  test_parsing.py  test_provider_contract.py  test_provider_registry.py  test_provider_utils.py  test_qwen_provider.py  test_resilience.py  test_routes.py  test_session_pool.py
