[project]
name = "prompt-bridge"
version = "1.0.0"
description = "Professional AI proxy platform with browser automation and multi-provider support"
readme = "README.md"
authors = [{ name = "Sabry Awad", email = "dr.sabry1997@gmail.com" }]
requires-python = ">=3.11"
dependencies = [
    # Core Framework
    "fastapi>=0.135.3",
    "uvicorn[standard]>=0.44.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    # Browser Automation
    "scrapling[fetchers]>=0.4.5",
    # Configuration & Logging
    "structlog>=25.5.0",
    "python-dotenv>=1.2.2",
    # Resilience & Observability
    "prometheus-client>=0.25.0",
    "opentelemetry-api>=1.41.0",
    "opentelemetry-sdk>=1.41.0",
    # CLI & Developer Experience
    "typer>=0.24.1",
    "rich>=15.0.0",
    "httpx>=0.28.1",
    # Async Support
    "asyncio-mqtt>=0.16.2",
    "curl-cffi>=0.15.0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "pytest-benchmark>=5.2.3",

    # Code Quality
    "mypy>=1.20.0",
    "ruff>=0.15.10",
    "black>=26.3.1",

    # Development Tools
    "pre-commit>=4.5.1",
]

[project.scripts]
prompt-bridge = "prompt_bridge.cli:cli_main"

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long, handled by black
    "B008", # do not perform function calls in argument defaults
]

[tool.black]
target-version = ['py311']
line-length = 88

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "smoke: marks tests as smoke tests (real integrations)",
    "benchmark: marks tests as performance benchmarks",
    "chaos: marks tests as chaos engineering tests",
]

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
]

[build-system]
requires = ["uv_build>=0.9.25,<0.10.0"]
build-backend = "uv_build"
